--- a/menu-buttons/main.yml
+++ b/menu-buttons/main.yml
@@ -3,7 +3,22 @@
       - اختَرْ يا هندسة من القايمة تحت اللي أنت عايزه 👇
     menu_buttons: !include ./1st-term.yml
 
-  - name: الترم الأول
+  - name: الترم الثاني
     messages:
       - اختَرْ يا هندسة من القايمة تحت اللي أنت عايزه 👇
-    menu_buttons: !include ./1st-term.yml
+    menu_buttons: !include ./2nd-term.yml
+
+  - name: الجدول 📅
+
+- - name: تعريف بالمواد
+    menu_buttons: !include ./courses-definitions.yml
+
+  - name: تقسيمة الدرجات
+
+- - name: رابط المنصة
+  - name: قائمة البوتات
+  - name: جروب الدفعة
+
+- - name: تواصل معنا 🙋🏻‍♂️
+  - name: المزيد 🤗
+    menu_buttons: !include ./more.yml
