add support for bot commands with bot menu builder

--- a/menu_buttons/main.yml
+++ b/menu_buttons/main.yml
@@ -2,11 +2,13 @@
     messages:
       - اختَرْ يا هندسة من القايمة تحت اللي أنت عايزه 👇
     menu_buttons: !include ./1st-term.yml
+    command: /1
 
   - name: الترم الثاني
     messages:
       - اختَرْ يا هندسة من القايمة تحت اللي أنت عايزه 👇
     menu_buttons: !include ./2nd-term.yml
+    command: /2
 
   - name: الجدول 📅
 
