--- a/menu_buttons/main.yml
+++ b/menu_buttons/main.yml
@@ -1,16 +1,21 @@
 - - name: الترم الأول
     messages:
-      - اختَرْ يا هندسة من القايمة تحت اللي أنت عايزه 👇
+      - |
+        تفضل الدرايف كله يا هندسة 👇
+        https://drive.google.com/folderview?id=1ko3dWCIeO6pS3crmyz5J2Rv_n5gzkDAW
     menu_buttons: !include ./1st-term.yml
     command: /1
 
   - name: الترم الثاني
     messages:
       - اختَرْ يا هندسة من القايمة تحت اللي أنت عايزه 👇
-    menu_buttons: !include ./2nd-term.yml
+    menu_buttons: !include ./2nd-term/main.yml
     command: /2
 
   - name: الجدول 📅
+    messages:
+      - type: file
+        path: ./schedule.pdf
 
 - - name: تعريف بالمواد
     menu_buttons: !include ./courses-definitions.yml
@@ -22,5 +27,8 @@
   - name: جروب الدفعة
 
 - - name: تواصل معنا 🙋🏻‍♂️
+  - name: ❤️ صفحة الأسرة (زاج إنج)
+    messages:
+    - https://www.facebook.com/zagengfamily/
   - name: المزيد 🤗
     menu_buttons: !include ./more.yml
