--- a/menu/2nd-term/structure.yml
+++ b/menu/2nd-term/structure.yml
@@ -1,7 +1,7 @@
 - name: 👈 فيديوهات
-  menu_buttons:
+  submenu:
   - name: فيديوهات الدكاترة
-    menu_buttons:
+    submenu:
     - name: د. مجدي خلف
       messages:
       - |
@@ -27,7 +27,7 @@
 
         5. https://www.youtube.com/watch?v=8gtGEuP4usg
   - name: فيديوهات المعيدين
-    menu_buttons:
+    submenu:
     - name: م. محمد صلاح
       messages:
       - |
@@ -50,7 +50,7 @@
     د. عبد الله سلامة 
     https://drive.google.com/drive/u/0/folders/1-ggZy4xGHDqPu-UuqwTueT8pI-FUGpOJ
 - name: 👈 المذكرات
-  menu_buttons:
+  submenu:
   - name: م. محمد عبد الحميد 👷‍♂️
     messages:
     - |
