--- a/menu/2nd-term/math.yml
+++ b/menu/2nd-term/math.yml
@@ -1,20 +1,85 @@
-- name: محاضرات
+- name: فيديوهات 🎥
   messages:
   - |
-    https://drive.google.com/drive/u/0/folders/12_tfnrEKkqgPPMBqrhCPvAkVNIbKL2qn
-- name: مذكرات
+    قائمة تشغيل لـ م/ليلى 🎞
+    https://www.youtube.com/playlist?list=PLvb14w-UTQ5Y-_VW7SynIpkoPSzop96q1
+  - |
+    دي كده قائمة تشغيل تبع كيم كام 🎥
+    https://www.youtube.com/playlist?list=PLR2RsKKRngz4FTJ4ihxsFBicHtbBfOP-3
+  - |
+    https://drive.google.com/drive/u/0/folders/1cYthzCA53HXtB0dRkof1j_YMK5_M9nuI
+    
+    هنا برضو الفيديهات اللي نزلت علشان توصلها بسرعة ⏬🙋🏻‍♂️
+
+    Ch. 1 Special Functions Lec .1
+    http://bit.ly/3wtYqu3
+    Ch. 1 Special Functions Lec .2
+    http://bit.ly/3mK1sXl
+    Ch. 1 Special Functions Lec .3
+    http://bit.ly/3ddL3Ht
+    Ch. 1 Special Functions Lec .4
+    http://bit.ly/2QhBzlT
+    Ch. 1 Special Functions Lec .5
+    http://bit.ly/3bJjhBF
+    Ch. 1 Special Functions Lec .6
+    https://youtu.be/5oT1rw8DPVY
+    ------------------------------
+    Ch. Partial Diffrential Equations 2 Lec.1
+    http://bit.ly/2T4N7d7
+    Ch. Partial Diffrential Equations 2 Lec.2
+    http://bit.ly/3yFP1S2
+    ------------------------------
+    Ch3
+    https://youtu.be/hsLTJrq5vFE
+    ------------------------------
+    Ch4
+    https://bit.ly/3rZtLlo
+    ------------------------------
+    Ch 5. Lec.1
+    http://bit.ly/3utYgkX
+    Ch 5. Lec.2
+    http://bit.ly/3p4p22g
+    Ch 5. Lec.3
+    http://bit.ly/3vsEaZJ
+    ------------------------------
+    Ch 6. Lec.1
+    http://bit.ly/2SEzCke
+    Ch 6. Lec.2
+    http://bit.ly/2SyDPG9
+    ------------------------------
+    Ch 7.
+    http://bit.ly/3vMWKvP
+  - ↗️🔼⬆️⏫⤴️↖️👆
+- name: محاضرات 📗
   messages:
   - |
+    د. رباب
+    https://drive.google.com/drive/u/0/folders/156t-IS7bOZD3nplZtX1fg-FrTBKPz9xe
+
+    د. نورهان
+    https://drive.google.com/drive/u/0/folders/1gZgflNgQtPcJEQ0wZPdjK7QGUhhuBmyS
+
+    د. نظيرة
+    https://drive.google.com/drive/u/0/folders/1oeGHfNEoU_xVk5o2ou7K1U3hhXeqE9iY
+    وهنا برضو
+    https://drive.google.com/drive/u/0/folders/1coTR7DtkWQwhNl2EFwKPjKhNtSMgWaIW
+- name: مذكرات 📓
+  messages:
+  - |
+    اتفضل مذكرات محمد عبد الخالق
     https://drive.google.com/drive/u/0/folders/12o5Nn8EcWYb6otwH_5xnCETm4myo_9Oj
-- name: شيتات
+- name: شيتات 📘
   messages:
+  - اتفضل يا هندسة ⬇❤
   - |
     https://drive.google.com/drive/u/0/folders/18LJgfLzxHESSPhZ79OJ6taVVEyi5Gbed
-- name: تلخيص
+- name: تلخيص 📙
   messages:
+  - اتفضل يا هندسة ⬇❤
   - |
     https://drive.google.com/drive/u/0/folders/176aFQj50tzsm6Q9aB0cGJIjiQgJ8VpvE
-- name: امتحانات
+- name: امتحانات ❓
   messages:
+  - اتفضل يا هندسة ⬇❤
   - |
     https://drive.google.com/drive/u/0/folders/12pfIQagBGKyZnysYhItFl2V38mNGD_Cm
