--- a/menu/more.yml
+++ b/menu/more.yml
@@ -1,3 +1,3 @@
 - name: مساقات تعليمية 👨🏻‍🏫
-- name: معلومات عن الإيميل الجامعي
-- name: معلومات عن التربية العسكرية
+- name: معلومات عن الإيميل الجامعي 📨
+- name: معلومات عن التربية العسكرية 👮‍♂️
