refactor structre materials

--- a/menu/2nd-term/main.yml
+++ b/menu/2nd-term/main.yml
@@ -1,4 +1,5 @@
-- - name: 🟣 رياضيات Math
+-
+  - name: 🟣 رياضيات Math
     submenu: !include ./math.yml
     messages:
     - اختَرْ يا هندسة من القايمة تحت اللي أنت عايزه 👇
@@ -10,7 +11,8 @@
     submenu: !include ./mechanics.yml
     messages:
     - اختَرْ يا هندسة من القايمة تحت اللي أنت عايزه 👇
-- - name: 🟡 إنسانيات Humanities
+-
+  - name: 🟡 إنسانيات Humanities
     messages:
     - |
       محاضرات الدكتور 📺
