--- a/menu/more.yml
+++ b/menu/more.yml
@@ -1,3 +1,5 @@
 - name: مساقات تعليمية 👨🏻‍🏫
+  - messages:
+    - استنى على رزقك يا هندسة، سنأتي لك بما يشبع نَهَمك 😅❤️
 - name: معلومات عن الإيميل الجامعي 📨
 - name: معلومات عن التربية العسكرية 👮‍♂️
