refactor structure course data

--- a/menu/2nd-term/structure-videos.yml
+++ b/menu/2nd-term/structure-videos.yml
@@ -1,44 +1,45 @@
 -
-  - name: د. مجدي خلف
+  - name: 💠 د. مجدي خلف
     messages:
+    - الامتياز علي بعد خطوة إن شاء الله، متقلقش 😁👇
     - |
       https://www.youtube.com/playlist?list=PLODsgjy_5GdqwrAaE1S6R543lZqxunQI6
-  - name: د. عبد الله سلامة
+  - name: 💠 د. عبد الله سلامة
     messages:
+    - اتناول مني التلت فيديوهات بعد إذنك 👇
     - |
       1. https://www.youtube.com/watch?v=-CEuOaKklUY&t=541s
-
       2. https://www.youtube.com/watch?v=NweFeJEMzUE
-
       3. https://www.youtube.com/watch?v=dWxbMJzNw38
 -
-  - name: د. طارق عثمان
+  - name: 💠 د. طارق عثمان
     messages:
+    - اتناول مني الخمس فيديوهات بعد إذنك 👇
     - |
-      1. https://www.youtube.com/watch?v=xE5X-68pODc&t=2997s
-
-      2. https://www.youtube.com/watch?v=rMrPxerpzHE&t=1994s
-
+      1. https://www.youtube.com/watch?v=xE5X-68pODc
+      2. https://www.youtube.com/watch?v=rMrPxerpzHE
       3. https://www.youtube.com/watch?v=a5H5bPIB6N0
-
       4. https://www.youtube.com/watch?v=lgMbIx8mZAs
-
       5. https://www.youtube.com/watch?v=8gtGEuP4usg
-  - name: م. محمد صلاح
+  - name: 💠 م. محمد صلاح
     messages:
+    - قايمة التشغيل على اليوتيوب للباشمهندش الجميل ❤
     - |
       https://www.youtube.com/playlist?list=PLR2RsKKRngz7TgBOq1yaaARjAMGGoP2V7
 -
-  - name: م. الليثي
+  - name: 💠 م. الليثي
     messages:
+    - اتناول مني قايمة التشغيل دي بعد إذنك 👇
     - |
       https://www.youtube.com/playlist?list=PLCaeqXCPMbYm5qgnnmgXBd94VrsPBq524
-  - name: م. عسكر
+  - name: 💠 م. عسكر
     messages:
+    - اتناول مني قايمة التشغيل دي بعد إذنك 👇
     - |
       https://www.youtube.com/playlist?list=PLEeNs4S0UvDzohtnBbBgEVIEsyxofmND6
 -
-  - name: م. محمد عبد الحميد
+  - name: 💠 م. محمد عبد الحميد
     messages:
+    - ⏯🎦 قناة الباش مهندس معاك أهي يا هندسة 👇
     - |
       https://www.youtube.com/channel/UCiQ7CK0TaNe9df9-Zg5GB2A
