--- a/menu/2nd-term/structure.yml
+++ b/menu/2nd-term/structure.yml
@@ -1,48 +1,55 @@
 -
-  - name: 🙋🏻‍♂️ فيديوهات
+  - name: 📹 فيديوهات
     submenu: !include structure-videos.yml
-  - name: 🙋🏻‍♂️ المحاضرات
+  - name: 🔊 المحاضرات
     messages:
     - خد مني كده الحاجات دي يا باشمهندس 👊
     - |
       د. عبد الله سلامة 
       https://drive.google.com/drive/u/0/folders/1-ggZy4xGHDqPu-UuqwTueT8pI-FUGpOJ
 -
-  - name: 🙋🏻‍♂️ المذكرات
+  - name: 📒 المذكرات
     submenu:
     -
       - name: م. محمد عبد الحميد 👷‍♂️
         messages:
         - |
+          اتفضل يا هندسة المذكرات 📓💙
           https://drive.google.com/drive/u/0/folders/107mIShBd2sQjzRn9xgNX0LGTQxIwlsMz
       - name: م. عبد الله مرواد 👷‍♂️
         messages:
+        - اسمك كده الرابط ده، دي كده مذكرات م/عبد الله مرواد 📓💙
         - |
           https://drive.google.com/drive/u/0/folders/11WIDfFBv8Ye1DNebJ9R7Zy5bztxE9iu0
     -
       - name: م. البلبيسي  👷‍♂️
         messages:
+        - مذكرات البلبيسي 📓💙
         - |
           https://drive.google.com/drive/u/0/folders/10kvQ3OX8d9vH8mF4bF4wDSwWRVtK7YRV
       - name: م. محمد عسكر 👷‍♂️
         messages:
+        - اتفضل يا هندسة مذكرات محمد عسكر 📓💙
         - |
           https://drive.google.com/drive/u/0/folders/11Y3FypjnDaNZBMbSSECNU0n8EIo4x62U
-  - name: 🙋🏻‍♂️ الكويزات
+  - name: 📝 الكويزات
     messages:
-    - 👇🔽⏬
+    - 👇🔽⏬ دي الكويزات اللي بتنزل على المنصة
     - |
       https://drive.google.com/drive/u/0/folders/11d4UV55zwOJQhXoGdePRt0DPpHtNpSCY
 -
   - name: 🙋🏻‍♂️ الشفوي
     messages:
     - |
-      مذكرات الشفوي لـ م/البلبيسي 📘📕👇
+      📕 مذكرات الشفوي لـ م/البلبيسي 📘👇
       https://drive.google.com/drive/u/0/folders/11bDpYSc4d-LqDWsBr9jMtK-efjPV_WCE
     - |
       شرح شفوي استراكتشر م/ محمد صلاح 📹👇
       https://www.youtube.com/watch?app=desktop&v=RUb_LOz0BX4
-  - name: 🙋🏻‍♂️ امتحانات
+    - |
+      🎥 وده فيديو لـ د/مجدي خلف بيتكلم فيه عن الشفوي 📷👇
+      https://www.youtube.com/watch?v=r_Dl_jR4JkE
+  - name: ✍️ امتحانات
     messages:
     - معاك هنا كده امتحانين، ركز فيهم وحلهم وسمِّ الله كده الأول 💚
     - |
