--- a/menu/main.yml
+++ b/menu/main.yml
@@ -1,3 +1,4 @@
+# 📽🎥📹📺🖥💻⏯🎦💠❇️✅✳️🔸🔹♦️🔺🔻📢📣
 - - name: المواد 📚
     submenu:
     - - name: الترم الأول 1️⃣
@@ -54,9 +55,17 @@
       قسم الهندسة الميكانيكية - الفرقة الثانية
       https://t.me/DA7ee7_2nd_mech_bot
   - name: جروب الدفعة 🤙
-  - name: ❤️ صفحة الأسرة (زاج إنج)
+  - name: ❤️ زاج إنج
     messages:
-    - https://www.facebook.com/zagengfamily/
+    - |
+      Facebook ⬇️
+      https://www.facebook.com/zagengfamily
+
+      Instagram ⬇️
+      https://instagram.com/zagengfamily
+
+      Twitter ⬇️
+      https://twitter.com/engzagfamily
 
 - - name: تواصل معنا 🙋🏻‍♂️
     messages:
