--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+certifi==2021.10.8
+charset-normalizer==2.0.12
+idna==3.3
 pyaes==1.6.1
 pyasn1==0.4.8
 pycodestyle==2.8.0
+pyTelegramBotAPI==4.4.0
 python-dotenv==0.19.2
+PyYAML==6.0
+requests==2.27.1
 rsa==4.8
 Telethon==1.24.0
 toml==0.10.2
+urllib3==1.26.8
