use a process file to track progress while automating MenuBuilderBot

--- a/menu/main.yml
+++ b/menu/main.yml
@@ -36,22 +36,18 @@
 - - name: قائمة البوتات 🤖
     messages:
     - |
-      Da7ee7 Civil 1st Year, [3/9/22 8:01 PM]
-      الفرقة الإعدادية
+      الفرقة الإعدادية 🤖🍼
       https://t.me/Da7ee7_Prep_Bot
     - |
-      Da7ee7 Civil 1st Year, [3/9/22 8:01 PM]
-      قسم الهندسة الكهربية - الفرقة الأولى
+      قسم الهندسة الكهربية - الفرقة الأولى 🤖⚡️
       https://t.me/Da7ee7_Electric_2024_Bot
-      قسم الهندسة الكهربية - الفرقة الثانية
+      قسم الهندسة الكهربية - الفرقة الثانية 🤖⚡️⚡️
       https://t.me/Da7ee7_Electric_2nd_Year_Bot
     - |
-      Da7ee7 Civil 1st Year, [3/9/22 8:01 PM]
-      قسم الهندسة المدنية - الفرقة الأولى
+      قسم الهندسة المدنية - الفرقة الأولى 🤖🏗
       https://t.me/Da7ee7_Civil_1st_Year_Bot
     - |
-      Da7ee7 Civil 1st Year, [3/9/22 8:01 PM]
-      قسم الهندسة الميكانيكية - الفرقة الثانية
+      قسم الهندسة الميكانيكية - الفرقة الثانية 🤖⚙️⚙️
       https://t.me/DA7ee7_2nd_mech_bot
   - name: جروب الدفعة 🤙
   - name: ❤️ زاج إنج
