update 2nd-term/drawing data

--- a/menu/2nd-term/main.yml
+++ b/menu/2nd-term/main.yml
@@ -35,3 +35,14 @@
   - |
     اتناول مني اللينك كده 🔗 👊
     https://drive.google.com/drive/u/0/folders/1aM_agL-gS5CbmvauDlTkYGOlJmj9SS2g
+  submenu:
+  - name: محاضرات 🖼
+    messages:
+    - |
+      محاضرات حتى منتصف الفصل الدراسي 👇❤️
+      https://drive.google.com/file/d/1r-7I4fdzDB0zjDGtNVJwJP1_oRlQOYim/view
+  - name: امتحانات 📝
+    messages:
+    - |
+      ميد 2017 👇❤️
+      https://drive.google.com/file/d/10h89nTiPINfu2ICF9x12BKGLpfEdZz1v/view
