update 1st semester data

--- a/menu/1st-term/space.yml
+++ b/menu/1st-term/space.yml
@@ -3,6 +3,7 @@
   - |
     أحلى لينك لأحلى هندسة ❤️👇
     https://bit.ly/3SOfB4q
+
 - name: م. ريهام نجيب
   messages:
   - |
@@ -45,3 +46,9 @@
     
     مذكرة 2
     https://bit.ly/3y6vuvg
+
+- name: الكتاب 📗
+  messages:
+  - |
+    اتفضل يعمنا 🙅‍♂
+    https://drive.google.com/file/d/15RzoHOpzHNhKR4B6lEzxrug7-Y4YB0zm/view?usp=sharing
