--- a/menu/1st-term/main.yml
+++ b/menu/1st-term/main.yml
@@ -1,7 +1,13 @@
 -
   - name: 🟣 علوم مواد
     messages:
-    - جاري رفع الداتا، اصبر علينا يهندسة 🤌
+    - |
+      نظري الشد
+      https://drive.google.com/drive/folders/1-1qPdMvWTSPwNtrF2zbDgAsRcz3CZZ8_?usp=sharing
+
+      مذكرات م. أحمد يسيري
+      https://drive.google.com/drive/folders/1CZnwOTTF_4GtOdP3ZPSVglPmCJ9c0_BQ?usp=sharing
+
   - name: 🟢 إنشاءات
     submenu: !include ./structure.yml
 -
@@ -21,3 +27,12 @@
     - جاري رفع الداتا، اصبر علينا يهندسة 🤌
   - name: ⚫️ مساحة
     submenu: !include ./space.yml
+
+- name: ⏳ لايحة قديمة
+  submenu:
+  - name: برمجة 🔹
+    submenu: !include ./old/programming.yml
+  - name: ماتريال 🔹
+    messages: !include ./old/materials.yml
+    
+  
