--- a/menu/1st-term/old/materials.yml
+++ b/menu/1st-term/old/materials.yml
@@ -1,6 +1,6 @@
 - name: مذكرات
   submenu:
-  - name: م. أحمد صبري
+  - name: م. أحمد صبري 📔
     messages:
     - |
       مذكرة 1
@@ -29,7 +29,7 @@
       مراجعة الميد
       https://bit.ly/3MA7Q09
 
-  - name: م. محمود عطية
+  - name: م. محمود عطية 📓
     messages:
     - |
       🔴 Metallurgy:
@@ -59,13 +59,13 @@
       7 bending test (مسائل)
       https://bit.ly/3T9cHb9
 
-  - name: م. أحمد يسري
+  - name: م. أحمد يسري 📒
     messages:
     - |
       اتفضل يا هندسة 👇
       https://bit.ly/3MzkZqm
     
-  - name: مذكرات المهندس
+  - name: مذكرات المهندس 📕
     messages:
     - |
       1️⃣
