--- a/menu/1st-term/old/programming.yml
+++ b/menu/1st-term/old/programming.yml
@@ -23,7 +23,7 @@
       محاضرة 10
       https://bit.ly/3CZB99i
 
-  - name: مذكرات 📓
+  - name: مذكرات 📙
     submenu:
     - name: مذكرات المهندس 📙
       messages:
@@ -61,7 +61,7 @@
       اتفضل يا غالي 👇
       https://bit.ly/3CZK4rp
 
-  - name: امتحانات 📝
+  - name: امتحانات 📃
     messages:
     - |
       اتفضل يا غالي 👇
